update html, readme, css

--- a/index.html
+++ b/index.html
@@ -2,21 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - kitty&#39;s world 2 (circle type 3)</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://api.fontshare.com/css?f[]=satoshi@701&display=swap" rel="stylesheet">
+  <link href="css\style.css" rel="stylesheet">
+  <script defer src="script.js"></script>
   
-  <title>Circle Type 2</title>
+  <title>Circle Type</title>
 </head>
 <body>
   
@@ -26,8 +18,6 @@
     <video src="https://media.giphy.com/media/92YG8KKSjYhMc/giphy.mp4" autoplay loop></video>
   </div>
   
-</body>
-</html>
 <!-- partial -->
   <script src='https://circletype.min.js'></script><script type="module" src="./script.js"></script>
 
